--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "expo": "^33.0.0",
     "expo-camera": "^5.0.1",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
+    "react-navigation": "^3.11.1",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
