--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "babel-plugin-inline-dotenv": "^1.3.3",
     "babel-preset-expo": "^5.1.1"
   },
   "private": true
